leaderhood test:bank

--- a/GOA test 1/index.html
+++ b/GOA test 1/index.html
@@ -24,16 +24,14 @@
     </nav>
 
 
-
-
     <div class="section">
         <div class="container">
             <div class="content-section">
                 <div class="title">
-                    <h3>რატომ უნდა შემოხვიდე ნარიმას რაზმში</h3>
+                    <h3 style="text-align: center; color: blue;">რატომ უნდა შემოხვიდე ნარიმას რაზმში</h3>
                 </div>
                 <div class="content">
-                    <p style="font-size: larger;">ჩემს(ნარიმას რაზმში)მოხვედრის სურვილის მიზეზები არც ისე ბევრია თუმცა <br>
+                    <p style="font-size: larger;" >ჩემს(ნარიმას რაზმში)მოხვედრის სურვილის მიზეზები არც ისე ბევრია თუმცა <br>
                     ვფიქრობ რამდენიმე ძირითადი მიზეზია რის გამოც ჩემი რაზმელები ჩემს რაზმში თავს კარგად გრძნობენ: </p>
                 
                 
@@ -44,7 +42,7 @@
                         <li>მშობლებს მუდმივ ინფორმაციას ვაწვდი მათი შვილების განათლება განვითარებასთან დაკავშირებით </li>
                         <li>ვფიქრობ მუდმივ თვითგანვითარებაზე რათა მეტი მოტივაცია მივცე რაზმელებს</li>
                         <li>ბავშვებს ვაჩვენებ თუ როგორ ვაკეთებ სახალისო და საინტერესო დავალებებს</li>
-                    </ul>
+                    </ul>3
                     <div class="button">
                         <a href="#">შეიტყვე მეტი</a>
                     </div>
