--- a/goa project 2.0/index.html
+++ b/goa project 2.0/index.html
@@ -18,6 +18,7 @@
             <a href="index.html"><img src="images/1-removebg-preview.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
+                
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -30,7 +31,8 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
-<div class="text-box">
+
+        <div class="text-box">
 
     <h1>GOA world's greatest academy </h1>
     <p>გააკეთო ვებსაიტი უკვე ძალიან მარტივი რამაა მსოფლიოში. მხოლოდ გჭირდება რომ შეისწავლო Html Css და javascript. GOA ამაში დაგეხმარება </p>
@@ -41,8 +43,8 @@
 </section>
 <!---- course ---->
 <section class="course"> 
-    <h1>Courses We Offer</h1>
-    <p>111111111111111111</p>
+    <h1>რას გთავაზობთ რაზმში</h1>
+    <p></p>
 
     <div class="row">
         <div class="course-col">
@@ -58,7 +60,7 @@
                 <div class="course-col">
                     <h3>შუალედური</h3>
                     <p>GOA BEST GOA BEST GOA BEST GOA BEST GOA BEST GOA BEST GOA BEST </p>
-                </div>y
+                </div>
     </div>
 
 </section>
