--- a/log in box/index.html
+++ b/log in box/index.html
@@ -15,8 +15,8 @@
     <div class="form">
         <h1>LOG IN HERE</h1>
         
-    <input type="text" name="email" placeholder="enter your email here">
-    <input type="password" name="" placeholder="enter password here">
+    <input type="text" name="email" placeholder="enter your email here" required>
+    <input type="password" name="" placeholder="enter password here" required>
     <a href="" class="hero-btn">LOGIN</a>
     <p class="link">Don't Have An Account?
         <br>
